# FractionClass

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: fraction.h
src/: fraction.cpp  fraction.ipp  main.cpp
